--- a/lan.html
+++ b/lan.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="feature">
-            <img src="2.png" alt="Feature 2">
+            <img src="2.jpg" alt="Feature 2">
             <h2>Feature 2</h2>
             <p>Connect with others and share your experiences effortlessly.</p>
         </div>
